--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Header</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <h1>Hello World</h1>
-    <p>This is hosted with github</p>
+    <header class="header">
+        <div class="logo"><img src="assets/logo.png" alt="Agency Logo"></div>
+        <nav class="nav-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
+        <div class="action-buttons">
+            <button class="cta">Request a Quote</button>
+        </div>
+        <div class="mobile-actions">
+            <button class="call-button" onclick="window.location.href='tel:+123456789'">☎ Call</button>
+            <button class="message-button">&#9993; Message</button>
+            <button class="menu-toggle">&#9776;</button>
+        </div>
+    </header>
+    <div class="mobile-menu hidden">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </div>
+    <script>
+        const menuToggle = document.querySelector('.menu-toggle');
+        const mobileMenu = document.querySelector('.mobile-menu');
+
+        menuToggle.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </body>
 </html>
